--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Foodyar</title>
-</head>
-<body>
-  
-</body>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title>Foodyar Recipes Master</title>
+    <meta name="description" content="resep makanan enak berkualitas" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Foodyar Food" />
+    <meta property="og:description" content="Makanan enak Resep berkualitas" />
+    <meta property="og:url" content="foodyar.id" />
+    <meta
+      property="og:image"
+      content="foodyar.id/images/content/foodyar-preview.jpg"
+    />
+
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="apple-touch-icon" href="images/content/favicon.ico" />
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="./css/app.minify.css" />
+    <link rel="icon" href="images/content/favicon.ico" />
+
+    <meta name="theme-color" content="#000" />
+  </head>
+
+  <body>
+    <!-- Add your site or application content here -->
+
+    <header class="w-full px-13">
+      <div class="container mx-auto p-13">
+        <div class="flex flex-stretch items-center">
+          <div class="flex items-center">
+            <img src="images/content/logo.png" alt="">
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments);
+      };
+      ga.q = [];
+      ga.l = +new Date();
+      ga("create", "UA-XXXXX-Y", "auto");
+      ga("set", "anonymizeIp", true);
+      ga("set", "transport", "beacon");
+      ga("send", "pageview");
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 </html>
